--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: labstepR
-Title: What the Package Does (one line, title case)
-Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Title: An R Package for Working with the Labstep API
+Version: 0.0.1
+Authors@R: person("Barney", "Walker", email = "barney@labstep.com", role = c("aut", "cre"))
+Description: Convenient wrapper functions around the Labstep API. Document your experiments, attach files, comments and more.
 Depends: R (>= 3.1.0)
+Imports: httr
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
