--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,17 @@
 
 export(addComment)
 export(attachFile)
+export(attachProtocol)
 export(authenticate)
 export(createExperiment)
 export(createProject)
 export(createProtocol)
 export(createResource)
+export(getExperiment)
 export(getExperiments)
+export(getProject)
+export(getProtocol)
 export(getProtocols)
+export(getResource)
 export(getResources)
+import(httr)
