--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 export(addComment)
 export(attachFile)
 export(attachProtocol)
-export(authenticate)
+export(login)
 export(createExperiment)
 export(createProject)
 export(createProtocol)
