--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,13 @@ export(addTagTo)
 export(attachFile)
 export(attachProtocol)
 export(createExperiment)
-export(createProject)
+export(createWorkspace)
 export(createProtocol)
 export(createResource)
 export(createTag)
 export(getExperiment)
 export(getExperiments)
-export(getProject)
+export(getWorkspace)
 export(getProtocol)
 export(getProtocols)
 export(getResource)
